# bitratecalc

./: Makefile.am  bitratecalc.cpp  bitratecalc.h  configure.ac
